monitoring/Ingress-prometheus.yaml
apiVersion: networking.k8s.io/v1
kind: Ingress
metadata:
  annotations:
    cert-manager.io/cluster-issuer: azure-acme-issuer
  name: prometheus
  namespace: monitoring
spec:
  ingressClassName: haproxy
  rules:
    - host: prometheus.cluster.anderwerse.de
      http:
        paths:
          - backend:
              service:
                name: kube-prometheus-prometheus
                port:
                  number: 9090
            path: /
            pathType: Prefix
  tls:
    - hosts:
        - prometheus.cluster.anderwerse.de
      secretName: prometheus-tls
